--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
     integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
   <title>Jaxon Narramore</title>
+  <meta name="google-site-verification" content="8ErhVnI5bIlfpSQsV5xd3ngobTf-Q_SHh7pjV90xNvg" />
 </head>
 
 <body>
